Configure api and seed database on start

--- a/MotoGPSchedulerApi/appsettings.json
+++ b/MotoGPSchedulerApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MotoGpScheduler;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MotoGpDatabase": "Server=(localdb)\\mssqllocaldb;Database=MotoGpScheduler;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -13,6 +13,24 @@
       "LogLevel": {
         "Default": "Warning"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost",
+      "sslPort": 0
+    },
+    "iisExpress": {
+      "applicationUrl": "http://localhost:29751",
+      "sslPort": 44371
+    }
+  },
+  "profiles": {
+    "Development": {
+      "commandName": "IISExpress",
+      "launchUrl": "https://localhost:44371/"
     }
   }
 }
